--- a/index.html
+++ b/index.html
@@ -2,38 +2,30 @@
 <html>
       <head>
             <meta charset="utf-8">
-            <title> Forms </title>
+            <title>Migrate from Html4  </title>
       </head>
       <body>
-            <h1> Form Example</h1>
-            <form action="#" method="post" name="first_form">
-                  full name: <input type="text" name="" value="">
-                  <br>
-                  password: <input type="password" name="" value="">
-                  <br>
-                  checkbox <input type="checkbox" name="" value="" checked>
-                  <br>
-                  radio <input type="radio" name="radio" value="" checked>
-                  <input type="radio" name="radio" value="" checked>
-                  <input type="radio" name="radio" value="" checked>
-                  <br>
-                  dropdown
-                  <select class="" name="">
-                        <optgroup label="option group1">
-                              <option value="">option 1</option>
-                              <option value="">option 2</option>
-                        </optgroup>
-                        <optgroup label="option group2">
-                              <option value="">option 3</option>
-                              <option value="">option 4</option>
-                        </optgroup>
-                  </select>
-                  <br>
-                  <textarea name="textarea" rows="8" cols="80"></textarea>
-                  <br>
-                  <input type="submit" name="" value="submit">
-                  <input type="reset" name="" value="reset">
-            </form>
+            <header>
+                  header
+            </header>
+            <nav>
+                  <ul>
+                        <li>Home</li>
+                        <li>Contact</li>
+                  </ul>
+            </nav>
+            <section>
+                  <article class="">
+                        <p>This is an article 1</p>
+                  </article>
+                  <article class="">
+                        <p>This is an article 2</p>
+                  </article>
+            </section>
+            <aside class="">
+                  <p>this is an aside</p>
+            </aside>
+            <footer>copyright &copy; 2018</footer>
 
       </body>
 </html>
