--- a/index.html
+++ b/index.html
@@ -2,30 +2,11 @@
 <html>
       <head>
             <meta charset="utf-8">
-            <title>Migrate from Html4  </title>
+            <title> Progress and Meter </title>
       </head>
       <body>
-            <header>
-                  header
-            </header>
-            <nav>
-                  <ul>
-                        <li>Home</li>
-                        <li>Contact</li>
-                  </ul>
-            </nav>
-            <section>
-                  <article class="">
-                        <p>This is an article 1</p>
-                  </article>
-                  <article class="">
-                        <p>This is an article 2</p>
-                  </article>
-            </section>
-            <aside class="">
-                  <p>this is an aside</p>
-            </aside>
-            <footer>copyright &copy; 2018</footer>
-
+            <meter value="4" min="0" max="10" low="5"
+            high="10"></meter>
+            <progress value="10" min="0" max="20">0%</progress>
       </body>
 </html>
