--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
       <head>
             <meta charset="utf-8">
-            <title> HTML5 New Forms Email </title>
+            <title> email </title>
       </head>
       <body>
             <form class="" action="index.html" method="post">
-                  email <input type="email" name="" value=""
-                  placeholder="email">
+                  phone
+                  <input type="tel" name="" value="">
                   <input type="submit" name="" submit="">
             </form>
       </body>
