new forms color

--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html>
       <head>
             <meta charset="utf-8">
-            <title> email </title>
+            <title> HTML5 New forms color </title>
       </head>
       <body>
             <form class="" action="index.html" method="post">
-                  phone
-                  <input type="tel" name="" value="">
-                  <input type="submit" name="" submit="">
+                  choose a color
+                  <input type="color" name="" value="#ffffff">
             </form>
       </body>
 </html>
