--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
       <head>
             <meta charset="utf-8">
-            <title> HTML5 New forms color </title>
+            <title> HTML5 forms range </title>
       </head>
       <body>
             <form class="" action="index.html" method="post">
-                  choose a color
-                  <input type="color" name="" value="#ffffff">
+                  range
+                  <input type="range" name="" value="" min="0" max="10"
+                  step="2" value="8">
             </form>
       </body>
 </html>
