--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html>
       <head>
             <meta charset="utf-8">
-            <title> HTML5 forms range </title>
+            <title> HTML5 New Forms URL </title>
       </head>
       <body>
             <form class="" action="index.html" method="post">
-                  range
-                  <input type="range" name="" value="" min="0" max="10"
-                  step="2" value="8">
+                  URL <input type="url" name="" value="">
+                  <input type="submit" name="" submit="">
             </form>
       </body>
 </html>
