--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
       <head>
             <meta charset="utf-8">
-            <title> HTML5 New Forms URL </title>
+            <title> HTML5 New Forms Number </title>
       </head>
       <body>
             <form class="" action="index.html" method="post">
-                  URL <input type="url" name="" value="">
-                  <input type="submit" name="" submit="">
+                  Number <input type="number" name="" value="" min="2" max="10" step="2">
+                  <input type="submit" name="" value="submit">
             </form>
       </body>
 </html>
