--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html>
       <head>
             <meta charset="utf-8">
-            <title> HTML5 New Forms Number </title>
+            <title> HTML5 New form search </title>
       </head>
       <body>
             <form class="" action="index.html" method="post">
-                  Number <input type="number" name="" value="" min="2" max="10" step="2">
-                  <input type="submit" name="" value="submit">
+                  Search <input type="search" name="" value="">
             </form>
       </body>
 </html>
