--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
       <head>
             <meta charset="utf-8">
-            <title> Audio </title>
+            <title> Video </title>
       </head>
       <body>
-            <audio src="intro.mp3" type="audio/mp3" controls autoplay loop>
-                  Please upgrade your browser
-            </audio>
+            <video src="Intro.mp4" type="video/mp4" height="200" width="300" poster="img/photo.jpg" preload="metadata" controls>
+
+            </video>
       </body>
 </html>
