--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html>
       <head>
             <meta charset="utf-8">
-            <title> Video </title>
+            <title> INLINE AND INTERNal Styles and external stylesheet </title>
+            <link rel="stylesheet" href="css/style.css">
       </head>
       <body>
-            <video src="Intro.mp4" type="video/mp4" height="200" width="300" poster="img/photo.jpg" preload="metadata" controls>
-
-            </video>
+            <h1>Welcome</h1>
       </body>
 </html>
