--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
       <head>
             <meta charset="utf-8">
-            <title> INLINE AND INTERNal Styles and external stylesheet </title>
+            <title> Selector </title>
             <link rel="stylesheet" href="css/style.css">
       </head>
       <body>
-            <h1>Welcome</h1>
+            <header>
+
+            </header>
       </body>
 </html>
