--- a/index.html
+++ b/index.html
@@ -2,15 +2,23 @@
 <html>
       <head>
             <meta charset="utf-8">
-            <title> margins </title>
+            <title> display values </title>
             <link rel="stylesheet" href="css/style.css">
       </head>
       <body>
-            <div class="box">
-                  This is box model 1
-            </div>
-            <div class="box2">
-                  This is box model 2
-            </div>
+            <a href="#">Link 1</a>
+            <a href="#">Link 2</a>
+            <a href="#">Link 3</a>
+            <a href="#">Link 4</a>
+
+            <h1>Heading 1</h1>
+            <h1>Heading 2</h1>
+            <h1>Heading 3</h1>
+
+            <img src="img/1.jpg" alt="">
+            <img src="img/2.jpg" alt="">
+            <img src="img/3.jpg" alt="">
+            <img src="img/4.jpg" alt="">
+
       </body>
 </html>
