--- a/index.html
+++ b/index.html
@@ -2,21 +2,22 @@
 <html>
       <head>
             <meta charset="utf-8">
-            <title>  </title>
+            <title> z-index </title>
             <link rel="stylesheet" href="css/style.css">
       </head>
       <body>
-            <!-- <div class="box">
-                  BOX
-            </div>
             <div class="box1">
-                  BOX
-            </div> -->
-            <div class="parent">
-                  <div class="child">
-                        BOX
-                  </div>
+
             </div>
+
+            <div class="box2">
+
+            </div>
+
+            <div class="box3">
+
+            </div>
+
       </body>
 
 </html>
