--- a/index.html
+++ b/index.html
@@ -2,12 +2,30 @@
 <html>
       <head>
             <meta charset="utf-8">
-            <title> overflow </title>
+            <title> flex box </title>
             <link rel="stylesheet" href="css/style.css">
       </head>
       <body>
-            <div class="box">
-                  <p>Loremmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <div class="container">
+
+                  <div class="items item1">
+                        box1
+                  </div>
+                  <div class="items item2">
+                        box2
+                  </div>
+                  <div class="items item3">
+                        box3
+                  </div>
+                  <div class="items item4">
+                        box4
+                  </div>
+                  <div class="items item5">
+                        box5
+                  </div>
+                  <div class="items item6">
+                        box6
+                  </div>
             </div>
 
 
