--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
       <head>
             <meta charset="utf-8">
-            <title> flex box </title>
+            <title> flex box content </title>
             <link rel="stylesheet" href="css/style.css">
       </head>
       <body>
