--- a/index.html
+++ b/index.html
@@ -2,33 +2,25 @@
 <html>
       <head>
             <meta charset="utf-8">
-            <title> flex items </title>
+            <title> 2D transform </title>
             <link rel="stylesheet" href="css/style.css">
       </head>
       <body>
-            <div class="container">
+            <h1> 2D translate</h1>
+            <div class="box translate"> </div>
+            <hr>
 
-                  <div class="items item1">
-                        box1
-                  </div>
-                  <div class="items item2">
-                        box2
-                  </div>
-                  <div class="items item3">
-                        box3
-                  </div>
-                  <div class="items item4">
-                        box4
-                  </div>
-                  <div class="items item5">
-                        box5
-                  </div>
-                  <div class="items item6">
-                        box6
-                  </div>
-            </div>
+            <h1> 2D rotate </h1>
+            <div class="box rotate"></div>
+            <hr>
 
+            <h1> 2D scale </h1>
+            <div class="box scale"></div>
+            <hr>
 
+            <h1> 2D skew </h1>
+            <div class="box skew"></div>
+                  
       </body>
 
 </html>
