--- a/index.html
+++ b/index.html
@@ -2,21 +2,14 @@
 <html>
       <head>
             <meta charset="utf-8">
-            <title> 3D transform </title>
+            <title> Transition </title>
             <link rel="stylesheet" href="css/style.css">
       </head>
       <body>
-            <h1> 3D translate</h1>
-            <div class="box translate"> </div>
-            <hr>
+            <h1>Transition</h1>
+            <div class="box">
 
-            <h1> 3D rotate </h1>
-            <div class="box rotate"></div>
-            <hr>
-
-            <h1> 3D scale </h1>
-            <div class="box scale"></div>
-      
+            </div>
 
       </body>
 
